[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Textures/Dark Green.PNG" type="Texture" id=2]
[ext_resource path="res://assets/Textures/Light Green.PNG" type="Texture" id=3]
[ext_resource path="res://assets/Pictures/Mazerunner_maze-skyview.jpg" type="Texture" id=4]
[ext_resource path="res://src/script/Main Menu.gd" type="Script" id=5]
[ext_resource path="res://src/scene/SFX.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scene/Settings Tab.tscn" type="PackedScene" id=7]

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
__meta__ = {
"_edit_horizontal_guides_": [ -122.539, 600.944 ]
}

[node name="Main Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Main Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Main Menu/VBoxContainer"]
margin_right = 400.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="lblMainMenu" type="Label" parent="Main Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 400.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 35 )
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="Main Menu/VBoxContainer"]
margin_top = 63.0
margin_right = 400.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 20 )

[node name="btnNewGame" type="TextureButton" parent="Main Menu/VBoxContainer"]
margin_top = 87.0
margin_right = 400.0
margin_bottom = 137.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="lblNewGame" type="Label" parent="Main Menu/VBoxContainer/btnNewGame"]
margin_right = 400.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 1 )
text = "NEW GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnOptions" type="TextureButton" parent="Main Menu/VBoxContainer"]
margin_top = 141.0
margin_right = 400.0
margin_bottom = 191.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="lblOptions" type="Label" parent="Main Menu/VBoxContainer/btnOptions"]
margin_right = 400.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 1 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnExit" type="TextureButton" parent="Main Menu/VBoxContainer"]
margin_top = 195.0
margin_right = 400.0
margin_bottom = 245.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="lblExit" type="Label" parent="Main Menu/VBoxContainer/btnExit"]
margin_right = 400.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 1 )
text = "EXIT GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX-mouseClick" parent="Main Menu" instance=ExtResource( 6 )]

[node name="Settings" parent="Main Menu" instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="Main Menu/VBoxContainer/btnNewGame" to="Main Menu" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/btnOptions" to="Main Menu" method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Main Menu/VBoxContainer/btnExit" to="Main Menu" method="_on_TextureButton3_pressed"]
[connection signal="close_settings" from="Main Menu/Settings" to="Main Menu" method="_on_Control_close_settings"]
